--- a/Testing.html
+++ b/Testing.html
@@ -39,9 +39,93 @@
                 </div>
             </div>
         </nav>
-
+        <section>
+            <div class="container-text">
+                <div class="item item-4">
+                    <h1 style="font-size: 50px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Software Testing
+                    </h1>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Introduction to JUnit
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        One of the software testing programs that programmers use is JUnit. JUnit is an open-source framework that supports test-driven development (TDD) and behavior-driven development (BDD) in Java. It simplifies the process of writing and running automated tests, making it easier to detect and fix bugs early in the development cycle. JUnit integrates seamlessly with popular development environments and build tools like Eclipse, IntelliJ IDEA, Maven, and Gradle.
+                    </p>
+                </div>
+                <div class="item item-4">
+                    <h1>Key Features of JUnit
+                    </h1>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Annotations:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        JUnit provides several annotations to define and manage test methods:
+                        <br><br>
+                         - @Test: Marks a method as a test case.
+                        <br>
+                         - @BeforeEach: Specifies a method to run before each test.
+                        <br>
+                         - @AfterEach: Specifies a method to run after each test.
+                         <br>
+                         - @BeforeAll: Specifies a method to run once before all tests.
+                         <br>
+                         - @AfterAll: Specifies a method to run once after all tests.
+                         <br>
+                         - @Disabled: Disables a test method or class.
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Assertions:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Assertions are used to verify the expected outcomes of test cases. Common assertions include:
+                        <br><br>
+                         - assertEquals(expected, actual): Checks if two values are equal.
+                        <br>
+                         - assertTrue(condition): Checks if a condition is true.
+                        <br>
+                         - assertFalse(condition): Checks if a condition is false.
+                         <br>
+                         - assertNull(object): Checks if an object is null.
+                         <br>
+                         - assertNotNull(object): Checks if an object is not null.
+                         <br>
+                         - assertThrows(expectedType, executable): Checks if an exception is thrown.
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Test Suites:                    
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Test suites allow grouping multiple test classes together to run them as a single unit using the @Suite annotation.
+                    </p>
+                </div>
+                <div class="item item-4">
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Benefits of Using JUnit
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                         - Automated Testing: JUnit facilitates automated testing, which helps in early detection of bugs and reduces manual testing effort.
+                        <br>
+                         - Regression Testing: Running JUnit tests regularly ensures that new changes do not break existing functionality, supporting regression testing.
+                        <br>
+                         - Documentation: Test cases serve as documentation for the expected behavior of the code.
+                        <br>
+                         - Continuous Integration: JUnit integrates well with continuous integration (CI) systems, ensuring that tests are run with every code change.
+                                            </p>    
+                </div>
+                <div class="item item-4">
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Example Class
+                    </h2>
+                    <img src="assets/calculator.png" alt="calc">
+                </div>
+                <div class="item item-4">
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Example Test Class
+                    </h2>
+                    <img src="assets/calculatorTest.png" alt="calc">
+                </div>
+            </div>
+        </section>
         <script src = "js/main.js"></script>
-        <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
-        <a style="text-decoration: none" href = "Hello Super Idol.html"> I have no dreams </a>
     </body>
 </html>
