--- a/UML.html
+++ b/UML.html
@@ -39,9 +39,98 @@
                 </div>
             </div>
         </nav>
+        <section>
+            <div class="container-text">
+                <div class="item item-4">
+                    <h1 style="font-size: 50px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        UML Diagrams
+                    </h1>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Intro to UML Diagrams
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        UML (Unified Modeling Language) class diagrams are one of the most commonly used diagrams in software engineering. They provide a visual representation of the static structure of a system, showing its classes, attributes, operations, and the relationships among objects. Class diagrams help in understanding and designing the system by illustrating the building blocks and their interactions.
+                    </p>
+                </div>
+                <div class="item item-4">
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Components of a Class Diagram
+                        <br>
+                        Classes:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        <br>
+                        Classes represent the blueprints of objects. Each class is depicted as a rectangle divided into three compartments:
+                        <br><br>
+                         - Top Compartment: Contains the class name, typically centered and bold.
+                        <br>
+                         - Middle Compartment: Lists the class attributes (fields or properties).
+                         <br>
+                         - Bottom Compartment: Lists the class methods (operations or functions).
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Attributes:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Attributes are the data members of a class. They are represented with their visibility, name, and type.
+                        <br>
+                        Classes represent the blueprints of objects. Each class is depicted as a rectangle divided into three compartments:
+                        <br><br>
+                         - Top Compartment: Contains the class name, typically centered and bold.
+                        <br>
+                         - Middle Compartment: Lists the class attributes (fields or properties).
+                         <br>
+                         - Bottom Compartment: Lists the class methods (operations or functions).
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Attributes:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Name: The name of the attribute.
+                        <br>
+                        Type: The data type of the attribute.
+                        <br>
+                        Example: -name: String indicates a private attribute name of type String.
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Methods:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Methods are the functions or operations that a class can perform. They are represented with their visibility, name, parameter list, and return type.
+                        <br>
+                        Example: +getName(): String indicates a public method getName that returns a String.
+                        <br>
+                    </p>
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+                        Relationships:
+                    </h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        Relationships in class diagrams show how classes are connected to each other. The primary types of relationships include:
+                        <br><br>    
+                         - Association: A basic relationship where one class uses or interacts with another. Represented by a line connecting two classes, possibly with a label or arrow indicating direction.
+                        <br><br>
+                         - Multiplicity: Indicates the number of instances in a relationship (e.g., 1, 0..*, 1..*).
+<br><br>
+ - Inheritance (Generalization): Indicates that one class (subclass) inherits from another (superclass). Represented by a solid line with a hollow triangle pointing towards the superclass.
+<br><br>
+ - Aggregation: Represents a "whole-part" relationship where one class is a part of another. Depicted by a hollow diamond at the end of the association pointing to the whole.
+<br><br>
+ - Composition: A stronger form of aggregation indicating that the part cannot exist without the whole. Represented by a filled diamond at the end of the association pointing to the whole.
+<br><br>
+ - Dependency: Indicates that one class depends on another (uses it temporarily). Represented by a dashed line with an arrow pointing towards the class it depends on.
+                                            </p>
+                </div>
+                <div class="item item-4">
+                    <h2 style="font-size: 40px; color: aliceblue; font-family: 'Courier New', Courier, monospace;">
+UML Example                    
+</h2>
+                    <p style="font-size: 20px; color: aliceblue; font-family: 'Courier New', Courier, monospace;" >
+                        <img src="assets/exampleUML.png" alt="stuff">
+                    </p>    
+                </div>
+            </div>
+        </section>
 
         <script src = "js/main.js"></script>
-        <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
-        <a style="text-decoration: none" href = "Hello Super Idol.html"> I have no dreams </a>
     </body>
 </html>
