--- a/index.html
+++ b/index.html
@@ -54,32 +54,16 @@
                     <img src="assets/profilePic.jpg" alt="profilePic" width="500px">
                 </div>
                 <div class="item item-2"> 
-                    <h1>
+                    <h1 style="font-size: 50px; font-family: 'Courier New', Courier, monospace; font-weight: bold;" >
                         About Me
                     </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur natus quod repellendus numquam soluta voluptatum magni, omnis deleniti veritatis, doloremque dolore repudiandae eligendi a ullam consequatur in porro hic perferendis.
+                    <p style="font-size: 30px; font-family: 'Courier New', Courier, monospace; font-weight: bold;">
+                        My name is Shayne Yang. I am a high school student at William Lyon Mackenzie Collegiate Institute who is pursuing a career in engineering. My three favourite activities are playing hockey, playing games and eating good food. 
+                        <br>
+                        <br>At home you will often find me cooking food, talking to friends or doing homework. Outside of school I participate in many different activities, my favourite being a robotics team that I am a part of. I love working with my hands and solving problems.
                     </p>
                 </div>
             </div>
         </section>
-
-        <section>
-            <div class="container-sm">
-                <div class="item item-1"> 
-                    <img src="assets/profilePic.jpg" alt="profilePic" width="500px">
-                </div>
-                <div class="item item-2"> 
-                    <h1>
-                        About Me
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur natus quod repellendus numquam soluta voluptatum magni, omnis deleniti veritatis, doloremque dolore repudiandae eligendi a ullam consequatur in porro hic perferendis.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <script src = "js/main.js"></script>
-
     </body>
 </html>
