--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="item item-1"> 
                     <img src="assets/profilePic.jpg" alt="profilePic" width="500px">
                 </div>
-                <div class="item item-2"> 
+                <div class="item item-2" style="overflow: scroll;"> 
                     <h1 style="font-size: 50px; font-family: 'Courier New', Courier, monospace; font-weight: bold;" >
                         About Me
                     </h1>
